updated  undo changes

--- a/index.html
+++ b/index.html
@@ -9,10 +9,7 @@
 <body>
     <div class="container">
         <h1>Screenshot Webapp</h1>
-        <form id="urlForm">
-            <input type="url" id="urlInput" placeholder="Enter website URL" required style="width:70%;padding:8px;">
-            <button type="submit">Get Screenshot</button>
-        </form>
+        <button id="screenshotBtn">Take Screenshot</button>
         <div id="screenshotResult"></div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
